--- a/appendix.tex
+++ b/appendix.tex
@@ -1,5 +1,6 @@
 \begin{appendix}
 
+  \input{appendix_constants}
   \input{appendix_datastructures}
   \input{appendix_runtime}
   %% appendix_lammpsrant
