--- a/appendix_alumina.tex
+++ b/appendix_alumina.tex
@@ -5,7 +5,7 @@
 
 \todoline{TMA-Simulationen}
 
-\section{Wasser-\ce{Al2O3}-Reaktionen}
+\section{Wasser-TMA-Reaktionen}
 
 \todoline{Bedeckung}
 \todoline{Ergebnis von 02\_water\_surface}
