--- a/appendix_silicon.tex
+++ b/appendix_silicon.tex
@@ -50,17 +50,17 @@ Weitere strukturelle Werte für alle untersuchten Parametrisierungen sind in Tab
     \oddrowcolors
     \begin{tabularx}{\textwidth}{|llXXlX|}
       \hline
-      \textbf{Parametrisierung} & \multicolumn{2}{l}{\textbf{Bindungslänge}} & \textbf{Koord.} & \textbf{Dichte} & ~  \\
+      \textbf{Parametrisierung} & \multicolumn{2}{l}{\textbf{Bindungslänge}}   & \textbf{Koord.} & \textbf{Dichte}    & ~                        \\
       \hline
-      (kristallin) & \SI{2.352}{\angstrom} & ~                    & \num{4.00}  & \SI{2.330}{\gpcc} & ~                         \\
-      amorph       & ~                     & ~                    & ~           & \SI{2.3}{\gpcc}   & \cite{remes_optical_1998} \\
-      Al\_Al0\_AlN & \SI{2.379}{\angstrom} & \SI{+1.15}{\percent} & \num{4.59}  & \SI{2.373}{\gpcc} & \SI{+3.15}{\percent}      \\
-      kulkarni     & \SI{2.339}{\angstrom} & \SI{-0.55}{\percent} & \num{4.05}  & \SI{2.361}{\gpcc} & \SI{+2.65}{\percent}      \\
-      liu\_ettr.   & \SI{2.401}{\angstrom} & \SI{+2.08}{\percent} & \num{4.10}  & \SI{2.314}{\gpcc} & \SI{+0.61}{\percent}      \\
-      narayanan    & \SI{2.383}{\angstrom} & \SI{+1.32}{\percent} & \num{4.05}  & \SI{2.365}{\gpcc} & \SI{+2.83}{\percent}      \\
-      newsome      & \SI{2.153}{\angstrom} & \SI{-8.46}{\percent} & \num{1.17}  & \SI{2.398}{\gpcc} & \SI{+4.26}{\percent}      \\
-      nielson      & \SI{2.411}{\angstrom} & \SI{+2.51}{\percent} & \num{4.82}  & \SI{2.358}{\gpcc} & \SI{+2.52}{\percent}      \\
-      zhang        & \SI{2.357}{\angstrom} & \SI{+0.21}{\percent} & \num{4.39}  & \SI{2.329}{\gpcc} & \SI{+1.26}{\percent}      \\
+      (kristallin)              & \SI{2.352}{\angstrom} & ~                    & \num{4.00}      & \SI{2.3296}{\gpcc} & ~                        \\
+      amorph                    & ~                     & ~                    & ~               & \SI{2.29}{\gpcc} \cite{remes_optical_1998} &  \\
+      Al\_Al0\_AlN              & \SI{2.379}{\angstrom} & \SI{+1.15}{\percent} & \num{4.59}      & \SI{2.373}{\gpcc}  & \SI{+3.62}{\percent}     \\
+      kulkarni                  & \SI{2.339}{\angstrom} & \SI{-0.55}{\percent} & \num{4.05}      & \SI{2.361}{\gpcc}  & \SI{+3.10}{\percent}     \\
+      liu\_ettr.                & \SI{2.401}{\angstrom} & \SI{+2.08}{\percent} & \num{4.10}      & \SI{2.314}{\gpcc}  & \SI{+1.05}{\percent}     \\
+      narayanan                 & \SI{2.383}{\angstrom} & \SI{+1.32}{\percent} & \num{4.05}      & \SI{2.365}{\gpcc}  & \SI{+3.28}{\percent}     \\
+      newsome                   & \SI{2.153}{\angstrom} & \SI{-8.46}{\percent} & \num{1.17}      & \SI{2.398}{\gpcc}  & \SI{+4.72}{\percent}     \\
+      nielson                   & \SI{2.411}{\angstrom} & \SI{+2.51}{\percent} & \num{4.82}      & \SI{2.358}{\gpcc}  & \SI{+2.97}{\percent}     \\
+      zhang                     & \SI{2.357}{\angstrom} & \SI{+0.21}{\percent} & \num{4.39}      & \SI{2.329}{\gpcc}  & \SI{+1.70}{\percent}     \\
       \hline
     \end{tabularx}
 
