--- a/contents.tex
+++ b/contents.tex
@@ -76,9 +76,9 @@ RDF       & Radial Distribution Function        & Radiale Verteilungsfunktion   
 RMS       & Root Mean Square                    & Standardabweichung                                         \\
 ReaxFF    & Reactive Force Fields               & Reaktive Kraftfelder                                       \\
 TMA       & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})                         \\
-NPT       & \multicolumn{2}{l}{Isotherm-Isobares Ensemble: Teilchenzahl, Druck und Temperatur sind konstant} \\
-NVE       & \multicolumn{2}{l}{Mikrokanonisches Ensemble: Teilchenzahl, Volumen und Energie sind konstant}   \\
-NVT       & \multicolumn{2}{l}{Kanonisches Ensemble: Teilchenzahl, Volumen und Temperatur sind konstant}     \\
+NPT       & \multicolumn{2}{l}{Bezeichnung für das Isotherm-Isobare Ensemble}                                \\
+NVE       & \multicolumn{2}{l}{Bezeichnung für das Mikrokanonische Ensemble}                                 \\
+NVT       & \multicolumn{2}{l}{Bezeichnung für das Kanonische Ensemble}                                      \\
 Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions} \\
 \end{tabular}
 
@@ -86,18 +86,19 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   Liste der Abkürzungen, die nicht weiter erklärt werden:
   (Comment-Umgebung, damit sie vom Parser trotzdem erfasst werden)
 
-NB        & Neighborhood                        & (atomare) Nachbarschaft                                     \\
-CLI       & Command Line Interface              & Kommandozeile                                               \\
-FEM       & Finite Element Method               & Finite-Elemente-Methoden                                    \\
-  ENAS      & \multicolumn{2}{l}{Fraunhofer-Institut für Elektronische Nano-Systeme}                            \\
-  LAMMPS    & \multicolumn{2}{l}{Large-scale Atomic/Molecular Massively Parallel Simulator (MD-Bibliothek)}     \\
+  NB     & Neighborhood            & (atomare) Nachbarschaft                                             \\
+  CLI    & Command Line Interface  & Kommandozeile                                                       \\
+  FEM    & Finite Element Method   & Finite-Elemente-Methoden                                            \\
+  ENAS   & \multicolumn{2}{l}{Fraunhofer-Institut für Elektronische Nano-Systeme}                        \\
+  LAMMPS & \multicolumn{2}{l}{Large-scale Atomic/Molecular Massively Parallel Simulator (MD-Bibliothek)} \\
   LMP
-  GMR       & Giant Magnetoresistance             & Riesenmagnetowiderstand                                     \\
+  GMR    & Giant Magnetoresistance & Riesenmagnetowiderstand                                             \\
   TMR
-NPH
+  NPH
   AMBER
   CHARMM
   EON
+  CRC
   LJ
   NIST
   NO
@@ -105,7 +106,7 @@ NPH
   GROMACS
   BIOVIA
   TU
-CG        & Conjugated Gradients                & Konjugierte Gradienten                                     \\
+  CG     & Conjugated Gradients    & Konjugierte Gradienten                                              \\
   EU
   ACCELERATE
   MOSFETs
@@ -149,9 +150,10 @@ $\mathbb{X}$         & Zustandsraum eines Systems                               
 %% $V$               & Volumen                                                         \\
 %% $p$               & Druck                                                           \\
 %% $\nabla$          & Nabla-Operator                                                  \\
-%% $\vec p$             & Impulsvektor                                                    \\
-%% $\vec v$             & Geschwindigkeitsvektor                                          \\
+%% $\vec p$          & Impulsvektor                                                    \\
+%% $\vec v$          & Geschwindigkeitsvektor                                          \\
 \end{tabular}
+\todoline{Laufzeitmaße ergänzen}
 
 %\printglosstex(acr)
 
