--- a/depositions.tex
+++ b/depositions.tex
@@ -31,7 +31,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
   \begin{threeparttable}
     \caption[Auswahl möglicher Produkte von PVD, CVD und ALD]{
       Auswahl möglicher Produkte von PVD, CVD und ALD.
-      Weitere Produkte und Precursor finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012}.
+      Weitere Produkte und Precursor finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012,ritala_chapter_2008}.
     }
     \label{tab:deposition-materials}
     \begin{tabularx}{\textwidth}{XcX}
@@ -56,10 +56,9 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
     & \\
     \end{tabularx}
     \begin{tablenotes}
-    \item[a] Metall-ALD ist schwierig, weshalb in der Regel andere Methoden zum Einsatz kommen
+    \item[a] Effiziente ALD-Prozesse und Precursorpaare existieren nur für wenige Metalle\cite{ritala_chapter_2008}
     \end{tablenotes}
   \end{threeparttable}
-  \todoline{Joerg: Thomas Wächtler fragen oder in seinen Veröffentlichungen suchen}
 \end{table}
 
 \begin{figure}
@@ -129,7 +128,6 @@ Die Abscheidung gemischter Systeme wie Legierungen und mehrlagigen Schichten wir
 
 Während einer Chemischen Gasphasenabscheidung (CVD, Chemical Vapor Deposition) adsorbieren sogenannte Precursormoleküle physikalisch auf dem Substrat und reagieren im Anschluss mit an der Oberfläche befindlichen Atomen.
 Dabei werden entweder Teile des Precursors auf der Oberfläche hinterlassen oder von vorherigen Reaktionen verbliebene Precursorliganden von der Oberfläche entfernt, wodurch bei entsprechender Prozessgestaltung gewünschte Stöchiometrien und Bindungen bevorzugt gebildet werden\cite{pierson_handbook_1999}.
-.
 Abbildung~\ref{fig:ald-schema} stellt diese Vorgehensweise für ALD-Prozesse dar, die eine Spezialisierung von CVD-Prozessen sind und im nächsten Abschnitt vorgestellt werden.
 Da es sich um einen kontinuierlichen Prozess handelt, befinden sich meist zwei Precursorgase gleichzeitig im Reaktor, wo sie idealerweise erst auf der Oberfläche miteinander reagieren, da Reaktionen zwischen ihnen in der Gasphase neben einem erhöhtem Gasverbrauch zu Verunreinigungen und Partikelbildung führen können.
 
