--- a/intro.tex
+++ b/intro.tex
@@ -45,7 +45,7 @@ Die vorliegende Implementierung dieses Modelles soll dafür außerdem zugunsten 
 %% {Struktur der Arbeit}
 \subsubsection{Struktur der Arbeit}
 
-Im Anschluss an diese Einleitung wird zuerst in Kapitel~\ref{theory} ein theoretischer Überblick über die Arten und Funktionsweisen von Gasphasenabscheidungen, sowie die Simulationsmethoden der Molekulardynamik und Kinetischen Monte Carlo-Methoden gegeben.
+Im Anschluss an diese Einleitung wird zuerst in Kapitel~\ref{theory} ein Überblick über die Arten und Funktionsweisen von Gasphasenabscheidungen, sowie die Simulationsmethoden der Molekulardynamik und Kinetischen Monte Carlo-Methoden gegeben.
 
 Danach stellt Kapitel~\ref{models} den aktuellen Stand der Simulationen von Gasphasenabscheidungen mit KMC und MD vor, präsentiert die Erweiterungen des kombinierten KMC/MD-Modells und gibt einen Überblick über allgemeine molekulardynamische Methoden zur Präparation von Prozessen und Substraten sowie zur Analyse von Ergebnissen\todo{Joerg: Benutzt man dafür MD-Methoden? zur=über wäre besser}.
 
