--- a/literature.bib
+++ b/literature.bib
@@ -572,23 +572,6 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/H52T8U9Z/Kulkarni et al. - 2013 - Oxygen Interactions with Silica Surfaces Coupled .pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/BPNQXE93/jp3086649.html:text/html}
 }
 
-@article{van_duin_reaxffsio_2003,
-	title = {{ReaxFFSiO} Reactive Force Field for Silicon and Silicon Oxide Systems},
-	volume = {107},
-	issn = {1089-5639},
-	url = {http://dx.doi.org/10.1021/jp0276303},
-	doi = {10.1021/jp0276303},
-	abstract = {To predict the structures, properties, and chemistry of materials involving silicon and silicon oxides; interfaces between these materials; and hydrolysis of such systems, we have developed the {ReaxFFSiO}, reactive force field. The parameters for this force field were obtained from fitting to the results of quantum chemical ({QC}) calculations on the structures and energy barriers for a number of silicon oxide clusters and on the equations of state for condensed phases of Si and {SiO}2 from {QC}. We expect that {ReaxFFSiO} will allow accurate dynamical simulations of bond breaking processes in large silicon and silicon oxide systems. {ReaxFFSiO} is based closely on the potential functions of the {ReaxFFCH} reactive force field for hydrocarbons, so that it should also be useful for describing reactions of organics with Si and {SiO}2 systems.},
-	number = {19},
-	urldate = {2014-07-01},
-	journal = {The Journal of Physical Chemistry A},
-	author = {van Duin, Adri C. T. and Strachan, Alejandro and Stewman, Shannon and Zhang, Qingsong and Xu, Xin and Goddard, William A.},
-	month = may,
-	year = {2003},
-	pages = {3803--3811},
-	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QMWE4RT8/van Duin et al. - 2003 - ReaxFFSiO Reactive Force Field for Silicon and Sil.pdf:application/pdf;ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/INS8HRC7/van Duin et al. - 2003 - ReaxFFSiO Reactive Force Field for Silicon and Sil.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/KTTWQ84J/jp0276303.html:text/html;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/IQG3TTXQ/jp0276303.html:text/html}
-}
-
 @article{newsome_oxidation_2012,
 	title = {Oxidation of Silicon Carbide by O2 and H2O: A {ReaxFF} Reactive Molecular Dynamics Study, Part I},
 	volume = {116},
@@ -1372,22 +1355,21 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/JKVSGAPB/Biehl and Much - 2005 - Off-Lattice KMC Simulations of Stranski-Krastanov-.pdf:application/pdf;quantumdor.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/U53XWPNA/quantumdor.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5CRH5HVI/1-4020-3315-X_6.html:text/html}
 }
 
-@article{song_reactive_2013,
-	title = {A reactive molecular dynamic simulation of oxidation of a silicon nanocluster},
-	volume = {15},
-	issn = {1388-0764, 1572-896X},
-	url = {http://link.springer.com/article/10.1007/s11051-012-1309-3},
-	doi = {10.1007/s11051-012-1309-3},
-	abstract = {This study presents an atomic level of molecular dynamic simulation of oxidation of silicon nanoparticle in use of a reactive force field ({ReaxFF}). The oxidation dynamics is revealed through the energy release, bond evolution and oxygen exchange processes. The oxidation is found to proceed in the manner of evolution of silicon–oxygen bond configuration, accompanied by the oxygen exchange process. The heat of reaction and the activation energy of the bond transformation process are also estimated, which indicates the capability of {ReaxFF} in the simulation of energetic materials.},
-	number = {1},
-	urldate = {2014-11-10},
-	journal = {Journal of Nanoparticle Research},
-	author = {Song, Pengxiang and Ding, Yulong and Wen, Dongsheng},
-	month = jan,
-	year = {2013},
-	keywords = {Characterization and Evaluation of Materials, Energetic material, Inorganic Chemistry, Molecular dynamics, Nanocluster, Nanofuel, Nanotechnology, Optics, Optoelectronics, Plasmonics and Optical Devices, Oxidation, Physical Chemistry, silicon},
-	pages = {1--11},
-	file = {Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/T5IKN2ID/s11051-012-1309-3.html:text/html}
+@article{renner_density_1973,
+	title = {Density of amorphous silicon films},
+	volume = {23},
+	issn = {0011-4626, 1572-9486},
+	url = {http://link.springer.com/article/10.1007/BF01591210},
+	doi = {10.1007/BF01591210},
+	number = {11},
+	urldate = {2014-11-17},
+	journal = {Czechoslovak Journal of Physics B},
+	author = {Renner, O. and Zemek, J.},
+	month = nov,
+	year = {1973},
+	keywords = {Nuclear Physics, Heavy Ions, Hadrons, Physics, general},
+	pages = {1273--1276},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/VQ3PRTEN/Renner and Zemek - 1973 - Density of amorphous silicon films.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ZACCSPHQ/10.html:text/html}
 }
 
 @article{martinez_packmol:_2009,
@@ -1495,23 +1477,6 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	year = {2002},
 	pages = {304--308},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QI3XVUJA/Gago et al. - 2002 - Nanopatterning of silicon surfaces by low-energy i.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/8FC5ND8K/313.html:text/html}
-}
-
-@article{pashley_growth_1964,
-	title = {The growth and structure of gold and silver deposits formed by evaporation inside an electron microscope},
-	volume = {10},
-	issn = {0031-8086},
-	url = {http://dx.doi.org/10.1080/14786436408224212},
-	doi = {10.1080/14786436408224212},
-	abstract = {Single crystal films of gold and silver have been prepared by evaporation onto molybdenum disulphide inside an electron microscope, in order to allow direct observation of the mode of growth. These experiments provide detailed information on the remarkable liquid-like behaviour of the coalescence of the initial metal nuclei, and the mode of formation of a continuous film. In addition, re-orientation and re-crystallization phenomena are observed, and these effects are shown to be predominant during the growth of a polycrystal-line deposit on an amorphous substrate. The various possible mechanisms for the liquid-like behaviour are considered, by making use of mathematical expressions initially derived to describe the sintering of spherical particles. A semi-quantitative explanation of the liquid-like behaviour is given in terms of the surface diffusion of the metal atoms over the metal islands, the driving force for the mass transfer being the associated reduction in surface energy.},
-	number = {103},
-	urldate = {2014-11-10},
-	journal = {Philosophical Magazine},
-	author = {Pashley, D. W. and Stowell, M. J. and Jacobs, M. H. and Law, T. J.},
-	month = jul,
-	year = {1964},
-	pages = {127--158},
-	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/JKB4DC3W/Pashley et al. - 1964 - The growth and structure of gold and silver deposi.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/PVR3TDFJ/14786436408224212.html:text/html}
 }
 
 @article{adamov_electrical_1974,
@@ -1644,28 +1609,33 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	isbn = {978-1439880494},
 	url = {http://www.hbcpnetbase.com/},
 	publisher = {{CRC} Press},
-	editor = {Haynes, W. M.},
+	author = {Haynes, W. M.},
 	year = {2011}
 }
 
-@book{kittel_einfuhrung_2013,
-	title = {Einführung in die Festkörperphysik},
-	publisher = {Oldenbourg Verlag},
-	author = {Kittel, Charles},
-	year = {2013}
+@incollection{ritala_chapter_2008,
+	address = {Cambridge, {UK}},
+	edition = {1},
+	title = {Chapter 4: Atomic Layer Deposition},
+	isbn = {978-0-85404-465-8},
+	url = {http://pubs.rsc.org/en/content/chapter/bk9780854044658-00158/978-0-85404-465-8},
+	abstract = {Atomic layer deposition ({ALD}) is a special variant of chemical vapour deposition ({CVD}) technology used to grow high-quality thin films through alternate self-limiting surface reactions (Figure 4.1). {ALD} has gained considerable interest in recent years as a thin film deposition method to overcome man...},
+	urldate = {2014-11-17},
+	booktitle = {Chemical Vapour Deposition: Precursors, Processes and Applications},
+	author = {Ritala, Mikko and Niinistö, Jaakko},
+	month = dec,
+	year = {2008},
+	pages = {158--206},
+	file = {9781847558794-00158:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5VA629KX/9781847558794-00158:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/V4UJKTUP/978-0-85404-465-8.html:text/html;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QXV6BZ97/978-0-85404-465-8.html:text/html}
 }
 
-@book{ashcroft_festkorperphysik_2012,
-	edition = {2},
-	title = {Festkörperphysik},
-	publisher = {Oldenbourg Verlag},
-	author = {Ashcroft, Neil W and Mermin, David N},
-	year = {2012}
-}
-
-@book{wyckoff_crystal_1964,
-	title = {Crystal structures},
-	publisher = {Krieger},
-	author = {Wyckoff, Ralph Walter Graystone},
-	year = {1964}
+@article{gottsche_uber_1956,
+	title = {Über die Orientierung dünner Aufdampfschichten von Metallen},
+	volume = {11},
+	url = {http://www.znaturforsch.com/aa/v11a/c11a.htm},
+	journal = {Zeitschrift für Naturforschung A},
+	author = {Göttsche, H.},
+	year = {1956},
+	pages = {55--68},
+	file = {ZNA-1956-11a-0055.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/CG2IX8P8/ZNA-1956-11a-0055.pdf:application/pdf}
 }
