--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -1,5 +1,9 @@
 \pdfminorversion=4
 
+\newif\ifpaperonly
+\paperonlyfalse
+%%\paperonlytrue
+
 \documentclass[
   draft,
   fontsize=11pt,
@@ -49,6 +53,7 @@
 \cleardoublepage
 \include{appendix}
 
+\cleardoublepage
 \include{bibliography}
 
 \include{unischeiss}
@@ -59,7 +64,6 @@
 
 \todoline{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
 \todoline{figures und tables positionieren!}
-\todoline{Theorie -> Grundlagen}
 \todoline{Erste Absätze: Keine Einrückung.}
 \todoline{Überprüfen, wo von Simulationen, Parsivald-Problemen, allgemeines Systemverhalten und Experimenten die Rede ist}
 \todoline{Keine Ebenen mit nur einem Eintrag (e.g. Kupfer-Ergebnisse)}
@@ -70,4 +74,4 @@
 \todoline{Kein Umbruch zwischen Bezeichnungen und inline-Formeln}
 \todoline{Kein Seitenumbruch zwischen Erklärungen und Formeln}
 
-\todoline{Gutachter oder Prüfer?}
+\todoline{Wofür brauchte ich Phasendiagramme?}
