--- a/summary.tex
+++ b/summary.tex
@@ -111,7 +111,7 @@ Zusätzlich erlaubt diese Oberflächenbeschreibung beliebige Auftreffwinkel nebs
 Außerdem ergeben sich durch die Referenzierung der unmittelbaren Nachbarschaft eines Atomes auch seine Koordinationen sowie potentiellen Bindungen, welche für die Ereignisauswahl hilfreich sind, wodurch eine bisher notwendige Konnektivitätsprüfung jedes Ereignisses entfällt.
 
 Eine der umfangreichsten Ergänzungen bestünde allerdings in der Einführung weiterer atomistischer Optimierungsmethoden, wie etwa Simulated Annealing per Metropolis Monte Carlo, für welche eine energetische Auswertung der reaktiven Kraftfelder neu implementiert werden müsste, weshalb sie in dieser Arbeit nicht umgesetzt wurde.
-Diese könnten neben molekulardynamischen Potentialen theoretisch auch auf präzisere Methoden wie Elektronenstrukturrechnungen zurück greifen.
+Diese könnten neben molekulardynamischen Potentialen \todo{Wort}theoretisch auch auf präzisere Methoden wie Elektronenstrukturrechnungen zurück greifen.
 Zur Vermeidung unnötiger Redundanz der Rechnungen müsste ein selbstlernendes Verzeichnis der potentiellen Reaktionen eingearbeitet werden, bei Energiebarrieren und damit verbundene Ereignisraten verwaltet und bei Bedarf ergänzt werden.
 Diese Methode wird bereits erfolgreich in anderen Off-Lattice-Modellen eingesetzt\cite{biehl_off-lattice_2005,stamatakis_graph-theoretical_2011}.
 
