--- a/packages.tex
+++ b/packages.tex
@@ -1,3 +1,5 @@
+\usepackage{ifdraft}
+
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[]{geometry} % Seitenraender
@@ -31,7 +33,16 @@
 
 \graphicspath{{img/},{img-results/}}
 
-\usepackage[plainpages=false,pdfpagelabels]{hyperref}
+%% \usepackage[plainpages=false,pdfpagelabels]{hyperref}
+\ifpaperonly
+  \usepackage[plainpages=false, pdfpagelabels, hidelinks=true, colorlinks=false, pdfpagelayout=TwoPageRight]{hyperref}
+\else
+  \definecolor{url}{rgb}{0.7 0 0.2}
+  \definecolor{link}{rgb}{0.0 0.0 0.8}
+  \definecolor{cite}{rgb}{0.0 0.5 0}
+  \usepackage[plainpages=false, pdfpagelabels, hidelinks=true, colorlinks=true, linkcolor=link, citecolor=cite, urlcolor=url, pdfpagelayout=TwoPageRight]{hyperref}
+\fi
+
 \usepackage{amssymb}
 \usepackage[font=normal]{subcaption}
 \usepackage{scrhack}
@@ -62,3 +73,4 @@
 \usepackage{cite}
 \usepackage{verbatim}
 \usepackage[percent]{overpic}
+
